k8s/app_go/go-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-go
  labels:
    app: app-go
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-go
  template:
    metadata:
      labels:
        app: app-go
    spec:
      containers:
      - name: app-go
        image: ali12hamdan/app_go:app_go-prod-1.0.0
        ports:
        - containerPort: 3000
