k8s/app_go/go-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-go-service
spec:
  selector:
    app: app-go
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
