k8s/app_go/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-go-service
  labels:
    app: app-go
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8002
  selector:
    app: app-go
