k8s/app_go/go-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-go-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app-go.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-go-service
                port:
                  number: 3000
